--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -36,6 +36,7 @@
         <TextView
             android:id="@+id/cart_name"
             tools:text="@string/chicken_burger"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -50,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/ic_baseline_add_24"
-                android:padding="10dp"
+                android:padding="7dp"
                 android:background="@drawable/number_border"
                 android:id="@+id/plus"/>
             <TextView
@@ -70,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/ic_baseline_remove_24"
-                android:padding="10dp"
+                android:padding="7dp"
                 android:background="@drawable/number_border"
                 android:id="@+id/minus"/>
         </RelativeLayout>
